<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MediaActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:textSize="25dp"
        android:text="@string/Pagamento" />

    <EditText
        android:id="@+id/dtPagamento"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:inputType="date" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:textSize="25dp"
        android:text="@string/Vencimento" />

    <EditText
        android:id="@+id/dtVencimento"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:inputType="date" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:textSize="30dp"
        android:text="@string/Valor" />

    <EditText
        android:id="@+id/vlrPagar"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/calcular"
        android:onClick="Calcular"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/txtPrestacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:textSize="35dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/Prestacao" />

    <TextView
        android:id="@+id/txtJurosPrest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:textSize="35dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/JurosPrest" />

    <TextView
        android:id="@+id/txtPorConta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:textSize="30dp"
        android:background="@color/colorPrimary"
        android:text="@string/PorConta" />

    <TextView
        android:id="@+id/txtJurosPc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:textSize="30dp"
        android:background="@color/colorPrimary"
        android:text="@string/JurosPc" />
</LinearLayout>
